--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -704,6 +704,17 @@ input, select, textarea {
 				width: 100%;
 			}
 
+		.image.main2 {
+			display: block;
+			margin-left: auto;
+			margin-right: auto;
+			width: 25%;
+		}
+
+			.image.main img {
+				width: 100%;
+			}
+
 		@media screen and (max-width: 736px) {
 
 			.image.main {
