--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -705,10 +705,10 @@ input, select, textarea {
 			}
 
 		.image.main2 {
-			display: block;
-			margin-left: auto;
-			margin-right: auto;
-			width: 25%;
+			display: flex;
+			justify-content: center;
+			margin-left: 37.5%;
+			margin-right: 37.5%;
 		}
 
 			.image.main img {
